--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "movie-marks",
   "version": "0.1.0",
+  "homepage": "https://taiki-yamada.github.io/movie-marks",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
